make sure date doesn't get too long on mobile

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -278,6 +278,15 @@ nav
       margin-left: 7px
       font-weight: bold
 
+  .header
+    .subheader
+      font-size: 49px
+      margin-bottom: 50px
+      margin-top: 30px
+
+      .date
+        font-size: 60px
+
 .game-logo-wrapper
   height: 175px
   display: flex
